--- a/TODO.txt
+++ b/TODO.txt
@@ -1,14 +1,6 @@
-add recover functionality - sort of works, styling is odd
-finish making pictures for other challenges
-  shapeshifter
+finish making pictures for other special rules:
   startWithMove
   startWithTwoMove
-  random
   secondBroodQueen
   modularHeralds
-  noEquipment
   infinityGauntlet
-Make header drawer move map down
-replace handle with full size bar
-clean up paths file
-remove debugging window
