--- a/TODO.txt
+++ b/TODO.txt
@@ -4,14 +4,19 @@ finish making pictures for other special rules:
   secondBroodQueen
   modularHeralds
   infinityGauntlet
+    --- links to rulebooks
 Dark Avengers should connect to void if coming from other side
 center carousel in the accordions
 add serialize state
 reset team when closing game setup
 let toggle team when clicking selected team
-add progress info on counts
+add progress info on all count gates
 scan sentinel activation protocol card for nimrod fight
 when equipment is selected, it should be clickable and in color
- 
+add kofi link
+flesh out debugging page
+Add links to doms rules
+Make desktop version
+
 // Nice to haves -
 search for items
