--- a/TODO.txt
+++ b/TODO.txt
@@ -18,7 +18,5 @@ flesh out debugging page
 Add links to doms rules
 Make desktop version
 Add the 5 points in next deadpool logic
-Hide DC stuff
-
-// Nice to haves -
-search for items
+Hide/remove DC stuff
+Add which expansion components come from
